--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "pytest>=7.4.3",
     "black>=23.12.0",
+    "numpy>=1.26.2",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
