--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pytest>=7.4.3",
     "black>=23.12.0",
     "numpy>=1.26.2",
+    "tqdm>=4.66.1",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
