--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ authors = [
 ]
 dependencies = [
     "pytest>=7.4.3",
-    "black>=23.12.0",
     "numpy>=1.26.2",
     "tqdm>=4.66.1",
+    "ruff>=0.1.8",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
